force-app/main/default/objects/Activity/fields/Activity_Subject__c.field-meta.xml
<CustomField>
    <fullName>Activity_Subject__c</fullName>
    <label>Activity Subject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call - Decision maker reached</fullName>
            </value>
            <value>
                <fullName>Call - Employee reached</fullName>
            </value>
            <value>
                <fullName>Call - Nobody reached</fullName>
            </value>
            <value>
                <fullName>Editorial - Lead Research</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>High Failure Rate - Kick Out</fullName>
            </value>
            <value>
                <fullName>High Failure Rate - Warning</fullName>
            </value>
            <value>
                <fullName>Order confirmation sent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Terminal</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction - CC</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction - Sales</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction - Premium</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction - Opinions</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction - Commission</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction - Other</fullName>
            </value>
            <value>
                <fullName>Shipment</fullName>
            </value>
            <value>
                <fullName>Rest. Optimization Initiative</fullName>
            </value>
            <value>
                <fullName>Report Information</fullName>
            </value>
            <value>
                <fullName>Appointment needed - Restaurant Not Reached</fullName>
            </value>
            <value>
                <fullName>Appointment needed - Menu Collection</fullName>
            </value>
            <value>
                <fullName>Appointment needed - Restaurant Request</fullName>
            </value>
            <value>
                <fullName>Call Back Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>