force-app/main/default/objects/Activity/fields/Call_subject__c.field-meta.xml
<CustomField>
    <fullName>Call_subject__c</fullName>
    <description>Created as part of SP-4946 +SCC-358</description>
    <label>Call subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS - Canceled order</fullName>
            </value>
            <value>
                <fullName>CS - Change order details</fullName>
            </value>
            <value>
                <fullName>CS - Change unavailable item</fullName>
            </value>
            <value>
                <fullName>CS - Order status Inquiry</fullName>
            </value>
            <value>
                <fullName>CS - Payment inquiries</fullName>
            </value>
            <value>
                <fullName>CS - Pick up issue - active order</fullName>
            </value>
            <value>
                <fullName>CS - Pick up issue - post pick up</fullName>
            </value>
            <value>
                <fullName>CS - Redelivery or Refund</fullName>
            </value>
            <value>
                <fullName>CS - Rider location inquiry</fullName>
            </value>
            <value>
                <fullName>CS/OPT - Delay/ Delivery time not met, Vendor call</fullName>
            </value>
            <value>
                <fullName>CS/OPT - Partner didn&apos;t answer</fullName>
            </value>
            <value>
                <fullName>CS/OPT - Pre/Big order verification</fullName>
            </value>
            <value>
                <fullName>OPT - Customer did not answer</fullName>
            </value>
            <value>
                <fullName>OPT - Driver behaviour</fullName>
            </value>
            <value>
                <fullName>OPT - Duplicate order - accepted</fullName>
            </value>
            <value>
                <fullName>OPT - Duplicate order - cancelled</fullName>
            </value>
            <value>
                <fullName>OPT - Operating hours incorrect</fullName>
            </value>
            <value>
                <fullName>OPT - Order accepted</fullName>
            </value>
            <value>
                <fullName>OPT - Ordered before partner is open</fullName>
            </value>
            <value>
                <fullName>OPT - Partner number invalid</fullName>
            </value>
            <value>
                <fullName>OPT - Partner too busy</fullName>
            </value>
            <value>
                <fullName>OPT - Product unavailable</fullName>
            </value>
            <value>
                <fullName>OPT - Technical issue</fullName>
            </value>
            <value>
                <fullName>OPT - Validate customers delivery address</fullName>
            </value>
            <value>
                <fullName>PC - Onb - Appointment made</fullName>
            </value>
            <value>
                <fullName>PC - Onb - Delayed delivery</fullName>
            </value>
            <value>
                <fullName>PC - Onb - Menu issues</fullName>
            </value>
            <value>
                <fullName>PC - Onb - Technical issues</fullName>
            </value>
            <value>
                <fullName>PC - Onb - Unreachable</fullName>
            </value>
            <value>
                <fullName>PC - Perf: Automation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>