force-app/main/default/objects/Activity/fields/Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Time__c</fullName>
    <formula>VALUE(MID(TEXT(CreatedDate+ 2/24),12,2))</formula>
    <label>Call Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>