force-app/main/default/objects/Activity/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Field created to show comments from tasks in related list</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>