force-app/main/default/objects/Activity/fields/Email_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipients__c</fullName>
    <description>Emails sent from Apex will use this field when manually creating Activity Entries for the sent out email. This field will a csv of all recipients of the email</description>
    <label>Email Recipients</label>
    <type>TextArea</type>
</CustomField>