force-app/main/default/objects/Activity/fields/Migrated_By__c.field-meta.xml
<CustomField>
    <fullName>Migrated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Data Migration user created to use for data migrations only
SP-2884</description>
    <label>Migrated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ActivitiesMigratedBy</relationshipName>
    <type>Lookup</type>
</CustomField>