force-app/main/default/objects/Activity/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <externalId>true</externalId>
    <label>Migration ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>