force-app/main/default/objects/Activity/fields/Old_SF_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_SF_Owner_Id__c</fullName>
    <description>Old SF Owner Id, to be used for migrating into SF</description>
    <label>Old SF Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>