force-app/main/default/objects/Activity/fields/Recording__c.field-meta.xml
<CustomField>
    <fullName>Recording__c</fullName>
    <label>Recording</label>
    <type>Url</type>
</CustomField>