force-app/main/default/objects/Activity/fields/Topis_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Topis_Discussed__c</fullName>
    <description>when Decision Maker is reached sales agent has to choose the topics discussed in the call/visit</description>
    <label>Topics Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Activity_Subject__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Premium Placement</fullName>
            </value>
            <value>
                <fullName>New Sign up</fullName>
            </value>
            <value>
                <fullName>Menu Printing</fullName>
            </value>
            <value>
                <fullName>Loyalty Schemes</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Account management</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rest Ops. - Improvement</fullName>
            </value>
            <value>
                <fullName>Rest Ops. - No Improvement</fullName>
            </value>
            <value>
                <fullName>Rest Ops. - follow-up required</fullName>
            </value>
            <value>
                <fullName>Opening times</fullName>
            </value>
            <value>
                <fullName>Delivery areas</fullName>
            </value>
            <value>
                <fullName>Transmission problem</fullName>
            </value>
            <value>
                <fullName>Too busy during peak time</fullName>
            </value>
            <value>
                <fullName>Decline rate</fullName>
            </value>
            <value>
                <fullName>Contract cancellation</fullName>
            </value>
            <value>
                <fullName>Contract issues</fullName>
            </value>
            <value>
                <fullName>Temporarily Deactivated</fullName>
            </value>
            <value>
                <fullName>Sales_Offer</fullName>
                <label>Sales Offer</label>
            </value>
            <value>
                <fullName>Reorder rate</fullName>
            </value>
            <value>
                <fullName>Reviews</fullName>
            </value>
            <value>
                <fullName>Merchandise</fullName>
            </value>
            <value>
                <fullName>Branding</fullName>
            </value>
            <value>
                <fullName>Deals</fullName>
            </value>
            <value>
                <fullName>Onboarding/Wellcome Call</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Restaurant performance</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>