force-app/main/default/objects/Activity/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <label>UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>