force-app/main/default/objects/Activity/fields/Wrapup0__c.field-meta.xml
<CustomField>
    <fullName>Wrapup0__c</fullName>
    <defaultValue>&quot;.&quot;</defaultValue>
    <inlineHelpText>This is the first Wraup Code from the Natterbox CTI</inlineHelpText>
    <label>Wrapup String 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>