force-app/main/default/objects/Activity/fields/Wrapup1__c.field-meta.xml
<CustomField>
    <fullName>Wrapup1__c</fullName>
    <defaultValue>&quot;.&quot;</defaultValue>
    <inlineHelpText>This is the second wrapup code from the Natterbox CTI.</inlineHelpText>
    <label>Wrapup String 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>